--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
 
         <script src="js/vendor/bootstrap.min.js"></script>
-        <script src="http://www.youtube.com/player_api"></script>
+        <script src="https://www.youtube.com/player_api"></script>
         <script src="js/main.js"></script>
     </body>
 </html>
